update settings, enable alphas
